# pyudk

./: LICENSE  README.md  __init__.py  core.py  pyproject.toml  setup.py
lib/: __init__.py  pyUdK.py
pyUdK/: mechanics.py
src/: __init__.py
tests/: test_uke.py
